--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,15 +2,29 @@ body{
     background-color: black;
     text-align: center;
     font-family: Verdana;
+    color: white;
 }
 
 h1 {
     font-weight: normal;
     font-size: 50px;
-    color: white;
+}
+
+h2 {
+    font-size: 42px;
+    font-weight: 300;
+}
+
+p {
+    color: gray;
+    font-size: 21px;
 }
 
 .download a{
     color: aquamarine;
     font-size: 16px;
+}
+
+.copyright {
+    text-align: right;
 }
